<resources>
    <string name="app_name">ProperTs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tenants">Tenants</string>
    <string name="maintenance">Maintenance</string>
    <string name="messaging">Messaging</string>
    <string name="complaints">Complaints</string>
    <string name="add_new_tenant">Add New Tenant</string>
    <string name="logout_user">Logout</string>
    <string name="change_user_settings">Change User Settings</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_tenants">Tenants</string>
    <string name="navigation_messaging">Messaging</string>
    <string name="navigation_maintenance">Maintenance</string>
    <string name="navigation_complaints">Complaints</string>
    <string name="spinner_prompt">Select Request Urgency</string>



    <string name="company_creation_welcome">We need just a few bits of information before you go live with your clients.
        Enter the information below to create your Rental Company.
        Don\'t worry if you don\'t have one right now, you can always change this name later from within the app."</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="update_unit">Update Unit</string>
    <string name="update_tenant">Update Tenant</string>


    <string-array name="urgencyValues">
        <item>Normal</item>
        <item>Urgent</item>
        <item>Critical</item>
    </string-array>


</resources>
