<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tenant"
        android:icon="@drawable/tenants"
        android:title="@string/tenants" />

    <item
        android:id="@+id/navigation_maintenance"
        android:icon="@drawable/maintenance"
        android:title="@string/maintenance" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/message"
        android:title="@string/messaging" />

    <item
        android:id="@+id/navigation_complaint"
        android:icon="@drawable/complaint"
        android:title="@string/complaints" />

</menu>
